# MCP-A2A-Udemy

./: .env.example  README-note1.md  README-note2.md  README-note3.md  README-note4.md  README.md  ToolCalling.ipynb  pyproject.toml
01_FirstMCPServer/: client.py  script.sh  server.py
02_TransportMethods/generic/: client.py  server.py
02_TransportMethods/sse/: client.py  server.py
02_TransportMethods/streamable_http/: client.py
03_ResourcesPromptsTools/: client.py  server.py
04_Context/: client.py  server.py
05_Discovery/: client.py  server.py
06_Roots/: client.py  server.py
06_Roots/demo_root/project/utils/: helper.py
07_Sampling/: client.py
08_LangGraph_MCP/: client.py  server.py
09_Authorization/: client.py  server.py
10_Fastapi_Integration/: client.py  fastapi_mcp_client.py  fastapi_mcp_server.py  fromapp_client.py  server.py
11_Composition/: client.py  server.py
12_Proxy_Servers/: backend_server_1.py  backend_server_2.py  client.py  configurable_proxy.py
13_Capstone/: .dockerignore  .env.example  Dockerfile.api  Dockerfile.furniture  api_server.py  common_detect_os.py  docker-compose.yaml  furniture_client_agent.py  furniture_server.py  index.html
Translate/: Comparison.csv  Comparison_Translated.csv  test.py  translate.py
playground/: client.py  server.py
